build prisma
